<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/enter_city"
        android:id="@+id/textViewEnterCityWidget"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextCityWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_city"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonCreateWidget"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_widget"
        android:textSize="14sp" />

    <Button
        android:text="@string/buttonCancel_widget"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancelWidget" />

</LinearLayout>