<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewAirQualityIndex"
        android:layout_toEndOf="@+id/textViewAirQualityIndex"
        android:layout_marginStart="93dp"
        android:id="@+id/textViewIndexNumber"
        android:background="@color/textview_index_color" />

    <TextView
        android:text="@string/textView_pollution_annotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPollutionAnnotation"
        android:textStyle="bold"
        android:layout_alignStart="@+id/textViewAirQualityIndex"
        android:layout_below="@+id/textViewAirQualityIndex" />

    <TextView
        android:text="@string/air_pollution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:id="@+id/textViewAirPollution"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/air_quality_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAirQualityIndex"
        android:textStyle="bold"
        android:layout_below="@+id/textViewAirPollution"
        android:layout_alignStart="@+id/textViewAirPollution" />

    <TextView
        android:text="@string/textView_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTemperature"
        android:textStyle="bold"
        android:layout_below="@+id/textViewPollutionAnnotation"
        android:layout_alignStart="@+id/textViewPollutionAnnotation" />

    <TextView
        android:text="@string/textView_updated_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewUpdated"
        android:layout_below="@+id/textViewTemperature"
        android:layout_alignStart="@+id/textViewTemperature" />

    <Button
        android:text="@string/button_ok_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonOKBack"
        android:layout_below="@+id/textViewUpdated"
        android:layout_toEndOf="@+id/textViewAirQualityIndex" />
</RelativeLayout>