<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gosia.airqualityapp.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textViewCity"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="194dp"
        android:layout_marginTop="18dp"
        android:id="@+id/editTextCity"
        android:hint="@string/hint_city"
        android:textSize="24sp" />

    <Button
        android:text="@string/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonOK"
        android:layout_below="@+id/editTextCity"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF0000FF"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/buttonOK"
        android:layout_alignParentStart="true"
        android:id="@+id/viewLine" />

    <TextView
        android:text="@string/textView_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewSource"
        android:layout_alignParentBottom="true"
        android:textSize="16sp" />

    <TextView
        android:text="@string/info_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLink"
        android:layout_below="@+id/viewLine"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:layout_alignParentEnd="true"
        android:textSize="18sp" />

    <TextView
        android:text="@string/textView_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/textViewCity"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
